bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:4: error: identifier expected but integer literal found.
	var coupe = str(0:2)
                          ^frontTimes:12: error: ')' expected but '}' found.
}
^